--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
    			cursor: pointer;
 			}
 			.search-input{
-      	background-color: #ff9e80 ;
+      	background-color: #b388ff;
   			height: 40px !important; 
   			margin-top: 10px;
   			border-radius: 10px;
@@ -49,7 +49,7 @@
 		  
 		</ul>
 	  <div class="navbar-fixed">
-		  <nav class="deep-orange accent-2" >
+		  <nav class="purple accent-3" >
 		    <div class="nav-wrapper">
 		      <div class="row">
 		        <div class="col s2">
