--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,2 +1,18 @@
-$('.answer_wrapper').prepend(" <%= j render @answer %>");
+// $('.answer_wrapper').prepend(" <%= j render @answer %>");
+$('.new_answer').prepend(
+
+	`<div class="row answer_wrapper">
+	  <div class="col s10 offset-s1">
+	    <div class="card hoverable">
+	      <div class="card-content">
+	          <%= j render @answer %>
+	      </div>
+	    </div>
+	  </div>
+	</div>`
+);
+
+
 $('.answer_form').trigger('reset');
+
+
