--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -17,11 +17,13 @@
 	</div>
 </div>
 
-
+<div class="row new_answer">
+  
+</div>
 
 
 <% @answers.all.reverse.each do |answer| %>
-<div class="row answer_wrapper">
+<div class="row answer_wrapper answer_show">
   <div class="col s10 offset-s1">
     <div class="card hoverable">
       <div class="card-content">
