--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -16,36 +16,13 @@
 		</div>
 	</div>
 </div>
-
-<div class="row new_answer">
-  
+<div class="row new_answer">  
 </div>
-
-
-<% @answers.all.reverse.each do |answer| %>
-<div class="row answer_wrapper answer_show">
-  <div class="col s10 offset-s1">
-    <div class="card hoverable">
-      <div class="card-content">
-          <%= render answer %>
-      </div>
-      <ul class="comments">
-        <%= render(partial: 'comments/comment', collection: answer.comments) %>  
-      </ul>
-      <div class="row card-panel grey lighten-3">
-        <%= form_for [answer, Comment.new], scope: 'comment', remote: true, class: "comment-field" do |f| %>
-          <%= f.hidden_field :user_id, value: @user.id %>
-          <%= f.text_area :content, placeholder: "Add a comment", class: 'white col s9 m9', id: "comment-field" %>
-          <%= f.submit 'Comment', :class => 'waves-effect waves-light btn right comment s2 m2', remote: true %>
-          
-        <% end %>
-      </div>
-    </div>
-  </div>
+<div class="answers">
+  <% @answers.all.reverse.each do |answer| %>
+    <%= render answer %>
+  <% end %>
 </div>
-
-<% end %>
-
 <div class="row">
   <%= render '/answers/answer_form' %>
 </div>
