fixed some minor issues for when user is not logged in. added rep ability for questions and answers. having a bit of a glitch where some data isn't displaying initially, but that's a problem for tomorrow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,6 +76,15 @@ pre {
 	height: 10px;
 }
 
+.rep-value-id {
+	position: absolute;
+	top: 30%;
+	left: 40%;
+	color: black;
+	width: 70%;
+	height: 10px;
+}
+
 .star-button {
 	position: absolute;
 	bottom: 3%;
