--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -8,18 +8,20 @@
       <ul class="comments">
         <%= render(partial: 'comments/comment', collection: @question.comments) %>  
       </ul>
-    	<%= form_for [@question, Comment.new], scope: 'comment', remote: true do |f| %>
-    		<%= f.hidden_field :user_id, value: @user.id %>
-				<%= f.text_area :content, placeholder: "Add a comment", class: 'white col s9 m9', id: "comment-field" %>
-    		<%= f.submit 'Comment', :class => 'waves-effect waves-light btn right comment s2 m2', remote: true %>
-			<% end %>
+      <% if user_signed_in? %>
+      	<%= form_for [@question, Comment.new], scope: 'comment', remote: true do |f| %>
+      		<%= f.hidden_field :user_id, value: @user.id %>
+  				<%= f.text_area :content, placeholder: "Add a comment", class: 'white col s9 m9', id: "comment-field" %>
+      		<%= f.submit 'Comment', :class => 'waves-effect waves-light btn right comment s2 m2', remote: true %>
+  			<% end %>
+      <% end %>
 		</div>
 	</div>
 </div>
 <div class="row new_answer">  
 </div>
 <div class="answers">
-  <% @answers.all.reverse.each do |answer| %>
+  <% @question.answers.all.reverse.each do |answer| %>
     <%= render answer %>
   <% end %>
 </div>
