--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,16 +1,23 @@
 <div class="row answer_wrapper answer_show">
   <div class="col s10 offset-s1">
     <div class="card hoverable">
+
+ 			<%= render partial: 'reputations/reputation', locals: {rep_object: answer} %>
+
       <div class="card-content">
-				<% if answer.user.id == current_user.id %>
-					<%= link_to "X", answer, method: :delete, remote: true, class: 'answer_delete waves-effect waves-light chip close right'%>
+      	<% if user_signed_in? %>
+					<% if answer.user.id == current_user.id %>
+						<%= link_to "X", answer, method: :delete, remote: true, class: 'answer_delete waves-effect waves-light chip close right'%>
+					<% end %>
 				<% end %>
 				<span class="card-title">Answer from <%= answer.user.username %></span>
 				<div class="card-content">
 					<% if local_assigns[:full] %>
 						<%= truncate(markdown(answer.content), length: 90, escape: false) %>
 					<% else %>
-						<%= best_in_place_if answer.user.id == current_user.id, answer, :content, :display_with => proc { |v| markdown(v)}, :type => :textarea %>
+						<% if user_signed_in? %>
+							<%= best_in_place_if answer.user.id == current_user.id, answer, :content, :display_with => proc { |v| markdown(v)}, :type => :textarea %>
+						<% end %>
 					<% end %>
 				<small class="col s12 m8">
 					Submitted <%= time_ago_in_words(answer.created_at) %> ago
@@ -20,13 +27,15 @@
 				<ul class="comments">
 				  <%= render(partial: 'comments/comment', collection: answer.comments) %>  
 				</ul>
-				<div class="row card-panel grey lighten-3">
-				  <%= form_for [answer, Comment.new], scope: 'comment', remote: true, class: "comment-field" do |f| %>
-				    <%= f.hidden_field :user_id, value: current_user.id %>
-				    <%= f.text_area :content, placeholder: "Add a comment", class: 'white col s9 m9', id: "comment-field" %>
-				    <%= f.submit 'Comment', :class => 'waves-effect waves-light btn right comment s2 m2', remote: true %>
-				  <% end %>
-				</div>
+				<% if user_signed_in? %>
+					<div class="row card-panel grey lighten-3">
+					  <%= form_for [answer, Comment.new], scope: 'comment', remote: true, class: "comment-field" do |f| %>
+					    <%= f.hidden_field :user_id, value: current_user.id %>
+					    <%= f.text_area :content, placeholder: "Add a comment", class: 'white col s9 m9', id: "comment-field" %>
+					    <%= f.submit 'Comment', :class => 'waves-effect waves-light btn right comment s2 m2', remote: true %>
+					  <% end %>
+					</div>
+				<% end %>
 			</div>
     </div>
   </div>
