--- a/app/views/reputations/_reputation.html.erb
+++ b/app/views/reputations/_reputation.html.erb
@@ -1,38 +1,41 @@
 <% if @reputation %>
 	<% if @reputation.errors.full_messages.any? %>
-	<ul>
-		<% @reputation.errors.full_messages.each do |error| %>
-			<li><%= error %></li>
-		<% end %>
-	</ul>
+		<ul>
+			<% @reputation.errors.full_messages.each do |error| %>
+				<li><%= error %></li>
+			<% end %>
+		</ul>
+	<% end %>
 <% end %>
-<% end %>
-<div class="vote-box">
+<div class="vote-box card-panel">
 	<!-- checks to see if if is on an index view. can't add reputation on index views -->
 	<% if params[:id] %>
 	
-		<% if Reputation.where(user_id: current_user.id, reputatable_id: rep_object.id, rep_given: true).exists? %>
+		<% if Reputation.where(user_id: current_user.id, reputatable_id: rep_object.id, rep_given: true).exists? or rep_object.user == current_user %>
 			<div class="upvote"></div>
 		<% else %>
 			<%= link_to reputations_path(reputation: {reputatable_id: rep_object.id, user_id: current_user.id, reputatable_type: rep_object.class, rep_given: true}), method: :post, remote: true do %>
-				<div class='upvote'></div>
+				<div class='upvote hoverable'></div>
 			<% end %>
 		<% end %>
 
-		<div class="rep-value" id="rep_value<%= rep_object.id %>"><%= rep_object.reputation %></div>
+		<div class="rep-value" id="rep_value<%= rep_object.id %>"> <%= rep_object.reputation %> </div>
 
-		<% if Reputation.where(user_id: current_user.id, reputatable_id: rep_object.id, rep_given: false).exists? %>
+		<% if Reputation.where(user_id: current_user.id, reputatable_id: rep_object.id, rep_given: false).exists? or rep_object.user == current_user %>
 			<div class="downvote"></div>
 		<% else %>
 			<%= link_to reputations_path(reputation: {reputatable_id: rep_object.id, user_id: current_user.id, reputatable_type: rep_object.class, rep_given: false}), method: :post, remote: true do %>
-				<div class='downvote'></div>
+				<div class='downvote card hoverable'></div>
 			<% end %>
 		<% end %>
+
 		<div class="star-button"></div>
 
 	<% else %>
 
+		<div class="upvote"></div>
 		<div class="rep-value"><%= rep_object.reputation %></div>
+		<div class='downvote'></div>
 		<div class="star-button"></div>
 
 	<% end %>
