--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,16 +1,68 @@
-<h1>Questions#index</h1>
-<p>Find me in app/views/questions/index.html.erb</p>
+<div class="row">
+<ul id="tabs-swipe-demo" class="tabs">
+  <li class="tab col s3"><a href="#test-swipe-1">Recently Asked</a></li>
+  <li class="tab col s3"><a class="active" href="#test-swipe-2">Most Popular</a></li>
+  <li class="tab col s3"><a href="#test-swipe-3">Dumbest</a></li>
+</ul>
+<div id="test-swipe-1" class="col s12">
+	<h1>Recently Asked Questions</h1>
 
-<% @questions.each do |question| %>
-	<div class="questions">
-		<div class="row question">
-			<%= link_to question do %>
-	  	<div class="col s10 offset-s1 index-card">
-	    	<div class="card hoverable">
-						<%= render question, full: true %>
+
+	<% @questions.each do |question| %>
+		<div class="questions">
+			<div class="row question">
+				<%= link_to question do %>
+		  	<div class="col s10 offset-s1 index-card">
+		    	<div class="card hoverable">
+							<%= render question, full: true %>
+					</div>
 				</div>
+				<% end %>
 			</div>
-			<% end %>
 		</div>
-	</div>
-<% end %>
+  <% end %>
+</div>
+
+<div id="test-swipe-2" class="col s12 cyan accent-2">
+	
+	<h1>Most Popular Questions</h1>
+
+
+	<% @questions.each do |question| %>
+		<div class="questions">
+			<div class="row question">
+				<%= link_to question do %>
+		  	<div class="col s10 offset-s1 index-card">
+		    	<div class="card hoverable">
+							<%= render question, full: true %>
+					</div>
+				</div>
+				<% end %>
+			</div>
+		</div>
+  <% end %>
+</div>
+
+
+<div id="test-swipe-3" class="col s12 green accent-2">
+
+
+	<h1>Dumbest Questions</h1>
+
+
+	<% @questions.each do |question| %>
+		<div class="questions">
+			<div class="row question">
+				<%= link_to question do %>
+		  	<div class="col s10 offset-s1 index-card">
+		    	<div class="card hoverable">
+							<%= render question, full: true %>
+					</div>
+				</div>
+				<% end %>
+			</div>
+		</div>
+	<% end %>
+
+</div>
+</div>
