--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,9 +6,9 @@
 	    	<div class="profile_pic_wrapper">
 	    		<%= image_tag @user.avatar.url(:medium), class: "profile_pic" %>
 	    	</div>
-	    	<i class="material-icons">filter_drama</i>
+	    	
 	    	<div>
-		    	<h5>	<%= @user.username %> </h5>
+		    	<h5> <i class="material-icons left">filter_drama</i>	<%= @user.username %> </h5>
 		    	Reputation: <%= @user.reputation %>
 		    	<br>
 		    	<% if @user.reputation < 20 %>
@@ -45,13 +45,13 @@
 	    <div class="collapsible-body">
 	    	<span>
 	    		<ul>
-						<li><i class="material-icons">hot_tub</i> Questions Asked: <%= @user.questions.count  %></li>
+						<li><i class="material-icons left">hot_tub</i> Questions Asked: <%= @user.questions.count  %></li>
 						<br>
-						<li><i class="material-icons">healing</i> Answers Given: <%= @user.answers.count  %></li>
+						<li><i class="material-icons left">healing</i> Answers Given: <%= @user.answers.count  %></li>
 						<br>
-						<li><i class="material-icons">highlight</i> Comments Made: <%= @user.comments.count  %></li>
+						<li><i class="material-icons left">highlight</i> Comments Made: <%= @user.comments.count  %></li>
 						<br>
-						<li><i class="material-icons">landscape</i> Current Reputation: <%= @user.reputation %></li>
+						<li><i class="material-icons left">landscape</i> Current Reputation: <%= @user.reputation %></li>
 					</ul>	
 		    </span>
 		  </div>
