fixed js for rep. changed quesiton input form a bit

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,5 +1,8 @@
-<%= form_with model: @question, id: "new-question" do |f| %>
-<%= f.text_field :title, placeholder: 'Title', class: "title" %>
-<%= f.text_field :content, placeholder: 'Content' %>
-<%= f.submit %>
-<% end %>
+
+		<div class="card quest_form">
+			<%= form_with model: @question, id: "new-question" do |f| %>
+				<%= f.text_field :title, placeholder: 'Title', class: "title" %>
+				<%= f.text_area :content, placeholder: 'Content', class: 'content' %>
+				<%= f.submit %>
+			<% end %>
+		</div>
