--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the questions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.quest-header{
+	padding: 2%;
+	text-align: center;
+}
+
+.quest_form{
+	padding: 0 2%;
+	.content{
+		min-height: 200px;
+	}
+}
