--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,4 +1,8 @@
-<h1>Questions#new</h1>
-<p>Find me in app/views/questions/new.html.erb</p>
-
-<%= render 'form' %>
+<div class="container">
+	<div class="row">
+		<div class="col s9 offset-s1" >
+			<h3 class="card quest-header">Ask a New Question</h3>
+			<%= render 'form' %>
+		</div>
+	</div>
+</div>
