fixed answers on questions so that they only show up on questions that they answered

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -19,7 +19,7 @@
 <div class="row new_answer">  
 </div>
 <div class="answers">
-  <% @answers.all.reverse.each do |answer| %>
+  <% @question.answers.all.reverse.each do |answer| %>
     <%= render answer %>
   <% end %>
 </div>
