--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,34 +4,9 @@
     <title>NoobOverflow</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-  	
-  	<style>
-    	input[id="search"] {
-				height: 40px !important; 
-  			margin-top: 10px;
-   			border-radius: 10px !important;
-   			cursor: pointer;
-			}
-			.search-input{
-      	background-color: #b388ff;
-  			height: 40px !important; 
-  			margin-top: 10px;
-  			border-radius: 10px;
-  			width: 60% !important;
-			}
-			nav .input-field label {
-    		top: -23px;
-    		left: 0;
-    		cursor: pointer;
-			}
-
-			.user-hub {
-				width: 100%;
-			}
-    </style>
   </head>
 
   <body>
@@ -50,7 +25,7 @@
 		  
 		</ul>
 	  <div class="navbar-fixed">
-		  <nav class="purple accent-3" >
+		  <nav class="nav-color" >
 		    <div class="nav-wrapper">
 		      <div class="row">
 		        <div class="col s2">
