--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -9,7 +9,7 @@
 					<br>
 					<br>
 					<br>
-		      <a class="waves-effect waves-light btn red">
+		      <a class="waves-effect waves-light btn">
 		      	<i class="material-icons left">flare</i> Start Tutorial!<br>
 		      </a>
 			  </span>
@@ -47,7 +47,7 @@
   <% end %>
 </div>
 
-<div id="test-swipe-2" class="col s12 cyan accent-2">
+<div id="test-swipe-2" class="col s12">
 	
 	<h1>Most Popular Questions</h1>
 
@@ -68,7 +68,7 @@
 </div>
 
 
-<div id="test-swipe-3" class="col s12 green accent-2">
+<div id="test-swipe-3" class="col s12">
 
 
 	<h1>Dumbest Questions</h1>
