--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
 		          <!-- <form class="search-input"> -->
 		            <div class="input-field search-input">
 		            <%= form_tag(search_index_path, method: 'get') do %>
-                	<%= text_field_tag :search, params[:search], :autocomplete => :on, :id => 'search', type: 'search' %>
+                	<%= text_field_tag :search, params[:search], :autocomplete => :on, :id => 'search', type: 'search', placeholder: "Seach by Tag" %>
               	<% end %>
 		            <label for="search"><i class="material-icons">search</i></label>
 		            </div>
