--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,11 +2,12 @@
 	<div class="row">
 		<div class="col s10 offset-s1">
 			<% if !@results.empty? %>
-				
-			<% end %>
-			<h5 class="result-header card">Results For Tags Including: <%= @search.to_s.remove!('[', ']') %></h5>
-			<% @results.each do |result| %>
-				<%= render result %>
+				<h5 class="result-header card">Results For Tags Including: <%= @search.to_s.remove!('[', ']') %></h5>
+				<% @results.each do |result| %>
+					<%= render result %>
+				<% end %>
+			<% else %>
+				<h3 class="result-header card">There No are no results matching those tags.</h3>
 			<% end %>
 		</div>
 	</div>
