--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -20,6 +20,7 @@
 					</div>
 					<div class="card-content">
 						<%= f.text_area :content, placeholder: 'Content' %>
+						<%= f.text_field :tag_list, value: f.object.tag_list.to_s, placeholder: 'Tags' %>
 						<%= f.submit class: "post_submit" %>
 					</div>
 				<% end %>
