--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -24,7 +24,7 @@
   <% question.tag_list.each do |tag| %>
     <div class="chip">
       <%= tag %>
-      <i class="close material-icons close_tag" data-question-id="<%= question.id%>">close</i>
+      <i class="close material-icons close_question_tag" data-question-id="<%= question.id%>">close</i>
     </div>
   <% end %>
 </div>
