--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,4 +1,4 @@
-<% if current_user %>
+<% if current_user.badge == nil %>
 	<ul class="collapsible" data-collapsible="accordion">
     <li>
       <div class="collapsible-header active"></div>
@@ -8,10 +8,8 @@
 
 					<br>
 					<br>
-					<br>
-		      <a class="waves-effect waves-light btn">
-		      	<i class="material-icons left">flare</i> Start Tutorial!<br>
-		      </a>
+
+		      <%= link_to "Start Tutorial", tutorials_path, class: "waves-effect waves-light btn" %>
 			  </span>
       </div>
     </li>
