--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,12 +34,12 @@ $slate: #EAE3EA;
 $seafoam: #A7B3A5;
 
 
-// $navbar-color: $eggplant;
-// $navbar-text: $sand;
-// $accent-color: $grape;
-// $content-color: $shell;
-// $background-color: $sand;
-// $button-color: $grape;
+$navbar-color: $eggplant;
+$navbar-text: $sand;
+$accent-color: $grape;
+$content-color: $shell;
+$background-color: $sand;
+$button-color: $grape;
 
 
 // $navbar-color: $mint;
@@ -49,12 +49,12 @@ $seafoam: #A7B3A5;
 // $background-color: $seafoam;
 // $button-color: $rust;
 
-$navbar-color: $mint;
-$navbar-text: $rust;
-$accent-color: $slate;
-$content-color: $slate;
-$background-color: $seafoam;
-$button-color: $rust;
+// $navbar-color: $mint;
+// $navbar-text: $rust;
+// $accent-color: $slate;
+// $content-color: $slate;
+// $background-color: $seafoam;
+// $button-color: $rust;
 
 nav{
 	li {
