--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -4,5 +4,12 @@
 .result-header{
 	text-align: center;
 	width: 90%;
-	margin-left: 20%;
+}
+
+.result{
+	width: 90%;
+	height: auto;
+	div {
+		display: inline-block;
+	}
 }
