--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,13 +2,19 @@
   <hr>
   <div class="row">
     <div class="col s10 offset-s1">
-      <% if comment.user.id == current_user.id %>
-        <%= link_to "X", post_comment_path(comment.id, comment), method: :delete, class: "waves-effect waves-light chip close delete-comment right", remote: true %>
-      <% end %>
+      <% if user_signed_in? %>
         
-
+        <% if comment.user.id == current_user.id %>
+          <%= link_to "X", post_comment_path(comment.id, comment), method: :delete, class: "waves-effect waves-light chip close delete-comment right", remote: true %>
+        <% end %>
+          
+      <% end %>
       <p>
-        <%= best_in_place_if comment.user.id == current_user.id, comment, :content, :as => :textarea %> - <%= comment.user.username %>
+        <% if user_signed_in? %>
+          <%= best_in_place_if comment.user.id == current_user.id, comment, :content, :as => :textarea %> - <%= comment.user.username %>
+        <% else %>
+          <%= comment.content %>
+        <% end %>
       </p>
 
       <small class="col s12 m8">
