--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,12 +5,16 @@
 
 		<% if local_assigns[:full] %>
 		<% else %>
-			<div style="float: right;">
-			  <% if post.user.id == current_user.id %>
-			    <%= link_to "Edit Post", edit_post_path(post) %>
-			    <%= link_to "Delete", post, method: :delete, remote: true, class: 'post_delete' %>
-			  <% end %>
-		  </div>
+			
+			<% if user_signed_in? %>
+				<div style="float: right;">
+				  <% if post.user.id == current_user.id %>
+				    <%= link_to "Edit Post", edit_post_path(post) %>
+				    <%= link_to "Delete", post, method: :delete, remote: true, class: 'post_delete' %>
+				  <% end %>
+			  </div>
+		  <% end %>
+		  
 		<% end %>
 
 		<p style="text-align: center; font-size: 2em;"> 
