--- a/app/views/reputations/_reputation.html.erb
+++ b/app/views/reputations/_reputation.html.erb
@@ -12,31 +12,41 @@
 <div class="vote-box card-panel">
 	<!-- checks to see if it is on an index view. can't add reputation on index views -->
 	<% if params[:id] %>
-	
-		<% if Reputation.where(user_id: current_user.id, reputatable_id: rep_object.id, rep_given: true).exists?  %>
-			<div class="upvote"></div>
-		<% elsif rep_object.user == current_user %>
-			<div class="upvote"></div>
-		<% else %>
-			<%= link_to reputations_path(reputation: {reputatable_id: rep_object.id, user_id: current_user.id, reputatable_type: rep_object.class, rep_given: true}), method: :post, remote: true do %>
-				<div class='upvote'></div>
+		<% if user_signed_in? %>
+			
+			<% if Reputation.where(user_id: current_user.id, reputatable_id: rep_object.id, rep_given: true).exists?  %>
+				<div class="upvote"></div>
+			<% elsif rep_object.user == current_user %>
+				<div class="upvote"></div>
+			<% else %>
+				<%= link_to reputations_path(reputation: {reputatable_id: rep_object.id, user_id: current_user.id, reputatable_type: rep_object.class, rep_given: true}), method: :post, remote: true do %>
+					<div class='upvote'></div>
+				<% end %>
 			<% end %>
-		<% end %>
 
-		<div class="rep-value" id="rep_value<%= rep_object.id %>"> <%= rep_object.reputation %> </div>
+			<div class="rep-value" id="rep_value<%= rep_object.id %>"> <%= rep_object.reputation %> </div>
 
-		<% if Reputation.where(user_id: current_user.id, reputatable_id: rep_object.id, rep_given: false).exists?  %>
-			<div class="downvote"></div>
-		<% elsif rep_object.user == current_user %>
-			<div class="downvote"></div>
-		<% else %>
-			<%= link_to reputations_path(reputation: {reputatable_id: rep_object.id, user_id: current_user.id, reputatable_type: rep_object.class, rep_given: false}), method: :post, remote: true do %>
-				<div class='downvote'></div>
+			<% if Reputation.where(user_id: current_user.id, reputatable_id: rep_object.id, rep_given: false).exists?  %>
+				<div class="downvote"></div>
+			<% elsif rep_object.user == current_user %>
+				<div class="downvote"></div>
+			<% else %>
+				<%= link_to reputations_path(reputation: {reputatable_id: rep_object.id, user_id: current_user.id, reputatable_type: rep_object.class, rep_given: false}), method: :post, remote: true do %>
+					<div class='downvote'></div>
+				<% end %>
 			<% end %>
+			
+			<div class="star-button"></div>
+
+		<% else %>
+
+			<div class="upvote"></div>
+			<div class="rep-value"><%= rep_object.reputation %></div>
+			<div class='downvote'></div>
+			<div class="star-button"></div>
+
 		<% end %>
-
-		<div class="star-button"></div>
-
+		
 	<% else %>
 
 		<div class="upvote"></div>
