--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -24,7 +24,11 @@
   <% question.tag_list.each do |tag| %>
     <div class="chip">
       <%= tag %>
-      <i class="close material-icons close_question_tag" data-question-id="<%= question.id%>">close</i>
+      <% if user_signed_in? %>
+        <% if question.user == current_user %>
+          <i class="close material-icons close_question_tag" data-question-id="<%= question.id%>">close</i>
+        <% end %>
+      <% end %>
     </div>
   <% end %>
 </div>
