fixed a few more errors and added searching by tags for posts as well. i think ryan has the delete tag thing working, so prob a few things to fix with that too once he gets it uploaded

--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -21,7 +21,7 @@
 								<div class="chip">
 									<%= tag %>
       						<% if answer.user == current_user %>
-        						<i class="close material-icons close_question_tag" data-question-id="<%= question.id%>">close</i>
+        						<i class="close material-icons close_question_tag" data-question-id="<%= answer.id%>">close</i>
     						  <% end %>
 							  </div>
 						  <% end %>
