badges on user show checks rep and updates

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,9 +51,9 @@ $seafoam: #A7B3A5;
 
 $navbar-color: $mint;
 $navbar-text: $rust;
-$accent-color: $slate;
-$content-color: $slate;
-$background-color: $seafoam;
+$accent-color: $seafoam;
+$content-color: ghostwhite;
+$background-color: $slate;
 $button-color: $rust;
 
 nav{
